Newest Version of B&F
The revised version of Blue&Fly restaruant

--- a/Aboutus.html
+++ b/Aboutus.html
@@ -126,14 +126,11 @@ h1, h2, h3, h4, h5, h6 {
 
   <div class="bf-bar bf-padding bf-card" style="letter-spacing:4px; background-color: white;">
   	
+  	<a href="HomePage3.html" >
   	<img class="bf-bar-item" src="image/blue&Fly_White.jpg" alt="" width="60" height="42"> 
-    <a href="HomePage3_W3C.html" class="bf-bar-item bf-button" >Blue & Fly Asian Kitchen</a>
-    
-    <div class="bf-right bf-hide-small" >
-      <a href="#about" class="bf-bar-item bf-button" style="padding:8px 30px;">About Blue&Fly </a>
-      <a href="#menu" class="bf-bar-item bf-button" style="padding:8px 30px;">Menu</a>
-      <a href="#contact" class="bf-bar-item bf-button"style="padding:8px 30px;">Contact Us </a>
-    </div>
+  	</a>
+    <a href="HomePage3.html" class="bf-bar-item bf-button" >Blue & Fly Asian Kitchen</a>
+   
   </div>
 </div>
 
@@ -263,7 +260,7 @@ h1, h2, h3, h4, h5, h6 {
  	}
   	slides[slideIndex-1].style.display = "block";  
   	dots[slideIndex-1].className += " active";
-  	setTimeout(showSlides, 5000); // Change image every 5 seconds
+  	setTimeout(showSlides, 3000); // Change image every 5 seconds
 	}	
 	</script>
   
@@ -275,7 +272,7 @@ h1, h2, h3, h4, h5, h6 {
 </div>
 <!-- Footer -->
 <footer class="bf-center bf-padding-32" style="margin-top: 50px;">
-	<b style="font-size: 20px;"><i>&copy; Ctd.lo 2019-2020 Blue&Fly Order</i></b>
+	<b style="font-size: 20px;"><i>&copy; Founded in 2015 Blue&Fly HomePage Copyright</i></b>
 </footer>
 
 </body>
